--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,11 +6,13 @@
     <title>Users</title>
 </head>
 <body>
+<div>
+    <a th:href="@{/logout}">Exit</a>
+</div>
 <div align="center">
     <h1> Users List</h1>
     <br/>
     <br/>
-    <a href ="/newUser"> Add New User</a>
     <table border="1" cellpadding="10">
         <tr>
             <th>User ID</th>
@@ -18,8 +20,6 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Age</th>
-            <th>Edit</th>
-            <th>Delete</th>
         </tr>
         <tr th:each="usr : ${user}">
             <td th:text="${usr.getId()}"> User ID</td>
@@ -27,12 +27,6 @@
             <td th:text="${usr.getFirstName()}">First Name</td>
             <td th:text="${usr.getLastName()}">Last Name</td>
             <td th:text="${usr.getAge()}">Age</td>
-            <td>
-                <a th:href="@{/edit/{id} (id=${usr.getId()})}">Edit</a>
-            </td>
-            <td>
-                <a th:href="@{'/remove/' + ${usr.getId()}}">Delete</a>
-            </td>
         </tr>
     </table>
 </div>
